add --max-import-file-size CLI parameter (resolves #186)
