# internal/api/restapi/handlers/config.go
@@ -119,8 +119,9 @@ func ConfigGet(api_general.ConfigGetParams) middleware.Responder {
 				FederatedIdps:        idps,
 				HomeContentURL:       strfmt.URI(config.ServerConfig.HomeContentURL),
 				LiveUpdateEnabled:    svc.Services.WebSocketsService().Active(),
+				MaxImportFileSize:    uint64(config.ServerConfig.MaxImportFileSize),
 				PageViewStatsEnabled: !config.ServerConfig.DisablePageViewStats,
-				PageViewStatsMaxDays: uint64(config.ServerConfig.StatsMaxDays),
+				PageViewStatsMaxDays: config.ServerConfig.StatsMaxDays,
 				PrivacyPolicyURL:     config.ServerConfig.PrivacyPolicyURL,
 				ResultPageSize:       util.ResultPageSize,
 				ServerTime:           strfmt.DateTime(time.Now().UTC()),
